<resources>
    <string name="git_app_name" translatable="false">TimeCat</string>
    <string name="git_default_text">Default Text</string>
    <string name="git_title_clone_repo">Clone Repository</string>
    <string name="git_preference_file_key" translatable="false">com.timecat.module.git</string>
    <string name="git_action_search">Search</string>
    <string name="git_action_clone">Clone</string>
    <string name="git_action_import_repo">Import Repository</string>
    <string name="git_action_settings">Settings</string>
    <string name="git_action_mode_rename_key">Rename key</string>
    <string name="git_action_mode_rename_branch">Rename branch</string>
    <string name="git_action_manage_private_key">Private Keys</string>
    <string name="git_action_generate_private_key">Generate Key</string>
    <string name="git_action_import_private_key">Import Key</string>
    <string name="git_action_mode_show_private_key">Show private key</string>
    <string name="git_action_mode_show_public_key">Show public key</string>
    <string name="git_action_mode_edit_key_password">Edit key password</string>
    <string name="git_action_feedback">Feedback</string>
    <string name="git_action_choose_language">Choose Language</string>
    <string name="git_action_mode_diff">Diff</string>
    <string name="git_action_edit">Edit</string>
    <string name="git_action_edit_save">Save</string>
    <string name="git_action_copy_all">Copy whole file</string>
    <string name="git_action_edit_in_other_app">Edit in other apps</string>
    <string name="git_action_reset">Reset</string>
    <string name="git_action_toggle_drawer">Toggle Drawer</string>
    <string name="git_action_copy_commit_str">Copy Commit Hash</string>
    <string name="git_action_create_external_repo">Create External Repo</string>
    <string name="git_action_share_diff">Share diff</string>
    <string name="git_action_save_diff">Save diff</string>
    <string name="git_action_send_report">Send report</string>
    <string name="git_label_ok">OK</string>
    <string name="git_label_remote_url">Remote URL</string>
    <string name="git_label_cancel">Cancel</string>
    <string name="git_label_clone">Clone</string>
    <string name="git_label_init">Init</string>
    <string name="git_label_delete">Delete</string>
    <string name="git_label_generate_key">Generate key</string>
    <string name="git_label_dialog_generate_key">Generate key</string>
    <string name="git_label_username">Username</string>
    <string name="git_label_password">Password</string>
    <string name="git_label_new_file_name">New Filename</string>
    <string name="git_label_key_size">Key length</string>
    <string name="git_label_rename">Rename</string>
    <string name="git_label_send_feedback">Send Feedback</string>
    <string name="git_label_import">Import</string>
    <string name="git_label_push">Push</string>
    <string name="git_label_push_all">Push All</string>
    <string name="git_label_pull">Pull</string>
    <string name="git_label_add_all_to_stage">Add all to stage</string>
    <string name="git_label_commit">Commit</string>
    <string name="git_label_create">Create</string>
    <string name="git_label_checkout">Checkout</string>
    <string name="git_label_git_name">Name</string>
    <string name="git_label_git_email">Email</string>
    <string name="git_label_git_name_per_repo">Committer name (this repo)</string>
    <string name="git_label_git_email_per_repo">Committer email (this repo)</string>
    <string name="git_label_done">Done</string>
    <string name="git_label_save">Save</string>
    <string name="git_label_choose_app_to_open">Open With …</string>
    <string name="git_label_choose_app_to_edit">Edit With …</string>
    <string name="git_label_new_branch_name">New Branch</string>
    <string name="git_label_anonymous_checkout">Anonymous checkout</string>
    <string name="git_title_activity_repo_detail">Repository</string>
    <string name="git_title_activity_import_repository">Import Repository</string>
    <string name="git_title_activity_view_file">File: </string>
    <string name="git_title_activity_commit_diff">Diff:   </string>
    <string name="git_title_section1">Section 1</string>
    <string name="git_title_section2">Section 2</string>
    <string name="git_title_section3">Section 3</string>
    <string name="git_tab_files_label">Files</string>
    <string name="git_tab_file_label">File</string>
    <string name="git_tab_commits_label">Commits</string>
    <string name="git_tab_status_label">Status</string>
    <string name="git_dialog_choose_branch_title">Choose Branch</string>
    <string name="git_dialog_choose_option">Choose option...</string>
    <string name="git_dialog_rename_repo_title">Rename Repository</string>
    <string name="git_dialog_rename_repo_hint">Repository Name</string>
    <string name="git_dialog_delete_repo_title">Delete Confirmation</string>
    <string name="git_dialog_delete_repo_msg">Are you sure you want to delete this repository?</string>
    <string name="git_dialog_rename_key_title">Rename</string>
    <string name="git_dialog_edit_key_password_title">Key Password</string>
    <string name="git_dialog_rename_branch_title">Rename</string>
    <string name="git_dialog_choose_language_title">Choose Language</string>
    <string name="git_dialog_comfirm_import_repo_title">Import Repository</string>
    <string name="git_dialog_comfirm_import_repo_msg">Are you sure you want to import this repository?</string>
    <string name="git_dialog_merge_title">Choose Branch To Merge</string>
    <string name="git_dialog_merge_checkbox">Commit after merge</string>
    <string name="git_dialog_file_delete">Delete File</string>
    <string name="git_dialog_file_delete_msg">Are you sure you want to delete this file or directory from working directory?</string>
    <string name="git_dialog_file_remove_cached">Remove Cached File</string>
    <string name="git_dialog_file_remove_cached_msg">Are you sure you want to delete this file or directory from index?</string>
    <string name="git_dialog_file_remove_force">Remove Force File</string>
    <string name="git_dialog_file_remove_force_msg">Are you sure you want to delete this file or directory from working directory and index?</string>
    <string name="git_dialog_key_delete">Delete Key</string>
    <string name="git_dialog_key_delete_msg">Are you sure you want to delete this key?</string>
    <string name="git_dialog_branch_delete">Delete Branch</string>
    <string name="git_dialog_branch_delete_msg">Are you sure you want to delete this branch?</string>
    <string name="git_dialog_reset_commit_title">Reset Changes</string>
    <string name="git_dialog_reset_commit_msg">Are you sure you want to discard all the changes?</string>
    <string name="git_dialog_create_dir_title">New Directory</string>
    <string name="git_dialog_create_dir_hint">Directory Name</string>
    <string name="git_dialog_create_file_title">New File</string>
    <string name="git_dialog_create_file_hint">File Name</string>
    <string name="git_dialog_comfirm_checkout_commit_title">Confirm Checkout</string>
    <string name="git_dialog_comfirm_checkout_commit_msg">Checkout Branch</string>
    <string name="git_dialog_profile_preferences_title">Preferences</string>
    <string name="git_dialog_prompt_for_password_title">Needs Authentication</string>
    <string name="git_dialog_prompt_for_password_title_auth_fail">Authentication Failed</string>
    <string name="git_dialog_prompt_for_password_checkbox">Save username and password</string>
    <string name="git_dialog_title_you_want_to">You want to …</string>
    <string name="git_dialog_create_branch_title">Create new branch</string>
    <string name="git_dialog_create_branch_hint">Branch Name</string>
    <string name="git_dialog_clone_recursive">Clone recursively</string>
    <string name="git_dialog_show_unstaged_diff">Unstaged diff</string>
    <string name="git_dialog_show_staged_diff">Staged diff</string>
    <string name="git_dialog_show_invalid_remote">Invalid remote report</string>
    <string name="git_dialog_not_supported">Not Supported</string>
    <string name="git_dialog_not_supported_msg">This feature is not supported on your device, please see the manual for more details.</string>
    <string name="git_dialog_error_title">Error occurred</string>
    <string name="git_dialog_error_send_report">Send error report</string>
    <string name="git_dialog_error_occurred_msg">An unexpected error occurred</string>
    <string name="git_dialog_keymap_title">Shortcut Keys</string>
    <string name="git_dialog_keymap_mesg"> C - Commits\n F- Files\n S- Status\n ? - Help\n</string>
    <string name="git_dialog_open_remote">Open remote url</string>
    <string name="git_dialog_open_remote_title">Choose app to open %s remote</string>
    <string name="git_dialog_open_remote_no_app_available">No Apps available to open the url</string>
    <string name="git_dialog_permission_not_granted">TimeCatGit requires that you grant it write access to be able to write local git repos to your storage, until you do this TimeCatGit will NOT work properly.</string>
    <string name="git_pull_msg_init">Pulling … </string>
    <string name="git_progress_left_init">0%</string>
    <string name="git_progress_right_init">0/0</string>
    <string name="git_push_msg_init">Pushing … </string>
    <string name="git_fetch_msg_init">Fetching … </string>
    <string name="git_title_activity_private_key_manage">Manage Private Keys</string>
    <string name="git_hello_world">Hello, World!</string>
    <string name="git_title_activity_explore_file">Explore Files</string>
    <string name="git_title_activity_settings">Settings</string>
    <string name="git_title_config_repo">Repository config</string>
    <string name="git_feedback_subject">Feedback</string>
    <string name="git_cannot_delete_branch">cannot delete %s</string>
    <string name="git_cannot_delete_current_branch">cannot delete currently checked out branch %s</string>
    <string name="git_preference_repo_location">Root storage location for repos</string>
    <string name="git_pref_category_title_general">General</string>
    <string name="git_pref_key_repo_root_location" translatable="false">repo_root_path</string>
    <string name="git_action_select_root_dir">Select as Root folder</string>
    <string name="git_action_create_new_dir">Create new folder</string>
    <string name="git_pref_category_title_git_profile">Git Profile</string>
    <string name="git_pref_key_git_user_name" translatable="false">user.name</string>
    <string name="git_preference_git_user_name">User Name</string>
    <string name="git_pref_key_git_user_email" translatable="false">user.email</string>
    <string name="git_preference_git_user_email">User Email</string>
    <string name="git_pref_category_title_about">About</string>
    <string name="git_preference_send_feedback">Feedback</string>
    <string name="git_preference_send_feedback_summary">Submit feedback by creating a new issue on GitHub</string>
    <string name="git_preference_key_app_version" translatable="false">app_version</string>
    <string name="git_preference_app_version">Version</string>
    <string name="git_preference_manage_ssh_keys_summary">Manage SSH Keys</string>
    <string name="git_label_reset">reset</string>
    <string name="git_label_merge">Merge</string>
    <string name="git_label_fetch">Fetch</string>
    <string name="git_label_rebase">Rebase</string>
    <string name="git_label_cherryPick">Cherry Pick</string>
    <string name="git_label_diff">Diff</string>
    <string name="git_label_newFile">New File</string>
    <string name="git_label_newDir">New Directory</string>
    <string name="git_label_addRemote">Add Remote</string>
    <string name="git_label_removeRemote">Remove Remote</string>
    <string name="git_label_rawConfig">Raw Config</string>
    <string name="git_label_config">Config</string>
</resources>