<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/git_general_padding">

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/git_general_vertical_margin"
        android:hint="@string/git_label_username"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:textSize="@dimen/git_general_dialog_text_size" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/git_general_vertical_margin"
        android:hint="@string/git_label_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textSize="@dimen/git_general_dialog_text_size" />

    <CheckBox
        android:id="@+id/savePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_vertical"
        android:checked="false"
        android:text="@string/git_dialog_prompt_for_password_checkbox" />
</LinearLayout>
